# iconup

./: .gitignore  README.md  package.json
.github/workflows/: build.yml
src/: index.html  lang.js  script.js  style.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
