[package]
name = "iconup"
version = "1.0.0"
description = "iCON Suite Installer - Upload sicuro via FTP/SFTP"
authors = ["YMEDIA"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
suppaftp = "6"
walkdir = "2"
aes-gcm = "0.10"
base64 = "0.21"
rand = "0.8"
dirs = "5"
# Pure Rust SSH/SFTP (no C dependencies)
russh = "0.51"
russh-sftp = "2.1"
ssh-key = "0.6"
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
