[package]
name = "iconup"
version = "1.0.135"
description = "iCON Suite Installer - Upload sicuro via FTP/FTPS/SFTP"
authors = ["YMEDIA"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
suppaftp = { version = "6", features = ["native-tls"] }
native-tls = "0.2"
ssh2 = "0.9"
walkdir = "2"
aes-gcm = "0.10"
base64 = "0.21"
rand = "0.8"
dirs = "5"
openssl = { version = "0.10", features = ["vendored"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
